add test script to package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "out/index.js",
   "scripts": {
     "build": "tsc",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "node out/test.js"
   },
   "author": "Sam Rijs",
   "license": "MIT",
