--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lcg",
-  "version": "0.1.3",
-  "description": "LCG Random Number Generator",
+  "version": "0.1.4",
+  "description": "Seedable and Splittable Random Number Generator",
   "main": "out/index.js",
   "scripts": {
     "build": "tsc",
@@ -17,6 +17,13 @@
   "devDependencies": {
     "typescript": "^1.8.7"
   },
+  "keywords": [
+    "random",
+    "number",
+    "generator",
+    "seed",
+    "split"
+  ],
   "typings": "out/index.d.ts",
   "bugs": {
     "url": "https://github.com/srijs/node-lcg/issues"
